--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <head>
     <title>OpenStreetMap</title>
  
+    <meta name="description" content="This document is a tutorial about Qt development">
+    <meta name="keywords" content="Qt, WebKit, Programming">
+    <meta name="author" content="Rainer Wahnsinn">
+
     <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
     <script src="http://www.openstreetmap.org/openlayers/OpenStreetMap.js"></script>
  
@@ -92,7 +96,7 @@ JSON.stringify()
     </script>
 </head>
  
-<body onload="init();" style="padding:0px; margin:0px">
+<body onload="init();" style="padding:0px; margin:0px;">
     <div style="width:100%; height:100%; margin:0px; padding:0px;" id="map"></div>
 </body>
 
