--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ JSON.stringify()
     </script>
 </head>
  
-<body onload="init();" style="padding:0px; margin:0px;">
+<body onload="init();" style="padding:0px; margin:0px; width:400px; height:400px;">
     <div style="width:100%; height:100%; margin:0px; padding:0px;" id="map"></div>
 </body>
 
