--- a/html/osm.html
+++ b/html/osm.html
@@ -6,8 +6,9 @@
     <meta name="keywords" content="Qt, WebKit, Programming">
     <meta name="author" content="Rainer Wahnsinn">
 
-    <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
-    <script src="http://www.openstreetmap.org/openlayers/OpenStreetMap.js"></script>
+    <script src="js/OpenLayers.js"></script>
+    <script src="js/OpenStreetMap.js"></script>
+    <script src="../js/api.js"></script>
  
     <script type="text/javascript">
         var lat=51.508;
@@ -16,10 +17,8 @@
  
         var map; //complex object of type OpenLayers.Map
  
-        //Initialise the 'map' object
         function init() {
- 
-            map = new OpenLayers.Map ("map", {
+            map = new OpenLayers.WmsMap ("map", {
                 controls:[
                     new OpenLayers.Control.Navigation(),
                     // new OpenLayers.Control.PanZoomBar(),
@@ -47,7 +46,7 @@
 
 
 
-
+/*
 JsWmsAPI = function () {
 
   this.map = null;
@@ -118,7 +117,7 @@ function ol_serviceinfo(m) {
 
   return info;
 };
-
+*/
 /*
 JSON.stringify()
 */
@@ -126,8 +125,8 @@ JSON.stringify()
     </script>
 </head>
  
-<body onload="init();" style="padding:0px; margin:0px; width:100px; height:100px; background:#ff0000;">
-    <div style="margin:0px; padding:0px; background:#00ff00;" id="map"></div>
+<body onload="init();" style="padding:0px; margin:0px; width:100px; height:100px; background:#ffffffff;">
+    <div style="margin:0px; padding:0px; background:#ffffffff;" id="map"></div>
   <!--<div style="width:100%; height:100%; margin:0px; padding:0px; background:#00ff00;" id="map"></div>
   -->
 </body>
