--- a/html/unitr.html
+++ b/html/unitr.html
@@ -89,9 +89,8 @@
         }
     </SCRIPT>
     <TITLE>Uni Trier, Campus I - als Overlay über OSM</TITLE>
-  <LINK rel="stylesheet" type="text/css" href="./unitr_files/style.css"></HEAD><BODY onload="init()">
-
-
+  <LINK rel="stylesheet" type="text/css" href="./unitr_files/style.css">
+</HEAD>
   
  
 <body onload="init();" style="padding:0px; margin:0px; width:500px; height:500px; background:#ffffffff;">
@@ -100,6 +99,4 @@
   -->
 </body>
 
-
-
-</BODY></HTML>
+</HTML>
