removing openlayer from repo

--- a/html/geojson.html
+++ b/html/geojson.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Qt, WebKit, Programming">
     <meta name="author" content="Rainer Wahnsinn">
 
-    <script src="js/OpenLayers.js"></script>
+    <script src="http://openlayers.org/api/OpenLayers.js"></script>
     <link rel="stylesheet" href="style.css" type="text/css" /> 
 
     <script type="text/javascript">
