--- a/html/osm.html
+++ b/html/osm.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Qt, WebKit, Programming">
     <meta name="author" content="Rainer Wahnsinn">
 
-    <script src="js/OpenLayers.js"></script>
+    <script src="http://openlayers.org/api/OpenLayers.js"></script>
     <script src="js/OpenStreetMap.js"></script>
     <script src="../js/api.js"></script>
  
