--- a/html/unitr.html
+++ b/html/unitr.html
@@ -1,7 +1,7 @@
 
 <!-- saved from url=(0048)http://amorphe-welt.de/openstreetmap/unikml.html -->
 <HTML xmlns="http://www.w3.org/1999/xhtml"><HEAD><META http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-    <SCRIPT src="js/OpenLayers.js"></SCRIPT>
+    <SCRIPT src="http://openlayers.org/api/OpenLayers.js"></SCRIPT>
     <SCRIPT src="js/OpenStreetMap.js"></SCRIPT>
     <script src="../js/api.js"></script>
 
